--- a/tutorial/bg_info/tutorial_julesrose/jr_mqrg.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_mqrg.html
@@ -118,7 +118,7 @@ fcm co fcm:jules.x_tr@vn#.#
 fcm co https://code.metoffice.gov.uk/svn/jules/main/trunk@vn#.#
 cd trunk
 # run the rose stem tests
-rose stem --new
+rose stem --group=all --new
 # create a branch for development on of the JULES code
 fcm bc &lt;BRANCH_NAME&gt; fcm:jules.x_tr@vn#.#
 cd ~jules/vn#p#
