--- a/tutorial/bg_info/tutorial_julesrose/jr_structures.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_structures.html
@@ -520,7 +520,7 @@ admin  benchmark  bin  etc  includes  rose-meta  rose-stem  src  utils
     |         |             fire_timestep_mod.F90,inferno_io_mod.F90,inferno_mod.F90,
     |         |             mcarthur_mod.F90,nesterov_mod.F90
     |         |----flake
-    |         |        |----data_parameters_mod.F90,flake.F90,flake_albedo_ref_mod.F90,
+    |         |        |----data_parameters_mod.F90,flake_mod.F90,flake_albedo_ref_mod.F90,
     |         |              flake_configure_mod.F90,flake_derivedtypes_mod.F90,
     |         |              flake_driver_mod.F90,flake_parameters_mod.F90,
     |         |              flake_paramoptic_ref_mod.F90,flake_radflux.F90,
@@ -577,7 +577,7 @@ admin  benchmark  bin  etc  includes  rose-meta  rose-stem  src  utils
     |         |             elev_htc_jls_mod.F90,frunoff_jls_mod.F90,gauss_jls_mod.F90,
     |         |             heat_con_jls_mod.F90,hyd_con_ch_mod.F90,hyd_con_ic_mod.F90,
     |         |             hyd_con_vg_jls_mod.F90,hydrol_jls_mod.F90,ice_htc_jls_mod.F90,
-    |         |             infiltration_rate_mod.F90,pdm_jls_mod.F90,sieve_jls_mod.F90,
+    |         |             infiltration_rate_mod.F90,n_leach_mod.F90,pdm_jls_mod.F90,sieve_jls_mod.F90,
     |         |             soil_htc_jls_mod.F90,soil_hyd_jls_mod.F90,soil_hyd_update_mod.F90,
     |         |             soil_hyd_wt_mod.F90,soilmc_jls_mod.F90,soilt_jls_mod.F90,surf_hyd_jls_mod.F90
     |         |----surface
@@ -585,7 +585,7 @@ admin  benchmark  bin  etc  includes  rose-meta  rose-stem  src  utils
     |         |                dustresb_jls.F90,elevate.F90,fcdch.F90,
     |         |                generate_anthrop_heat_jls_mod.F90,get_us.F90,
     |         |                ice_formdrag_lupkes_mod.F90,im_sf_pt2_jls.F90,
-    |         |                leaf_jls_mod.F90,leaf_limits.F90,leaf_lit_jls.F90,
+    |         |                leaf_jls_mod.F90,leaf_limits_mod.F90,leaf_lit_jls.F90,
     |         |                microbe_jls.F90,phi_m_h.F90,phi_m_h_vol.F90,
     |         |                physiol_jls_mod.F90,qsat_jls.F90,qsat_mix_jls.F90,
     |         |                qsat_wat_jls.F90,raero_jls.F90,root_frac_jls.F90,
