--- a/tutorial/bg_info/tutorial_julesrose/user_quiz.html
+++ b/tutorial/bg_info/tutorial_julesrose/user_quiz.html
@@ -407,14 +407,14 @@
                                 </div>
                             </li>
                             <li>
-                                <p class="question">How can you find out what the FCM keywords for are on your system?</p>
+                                <p class="question">How can you find out what the FCM keywords available are on your system?</p>
                                 <div id="26" class="questions">
                                     <ol type="A">
                                         <li><input type="radio" value="A" /><label for="A">fcm kp</label><br/></li>
                                         <li><input type="radio" value="B" /><label for="B">fcm keywords-print</label><br/></li>
                                         <li><input type="radio" value="C" /><label for="C">fcm keywords-point</label><br/></li>
-                                        <li><input type="radio" value="D" /><label for="D">1 and 2</label><br/></li>
-                                        <li><input type="radio" value="D" /><label for="D">1 and 3</label><br/></li>
+                                        <li><input type="radio" value="D" /><label for="D">A and B</label><br/></li>
+                                        <li><input type="radio" value="D" /><label for="D">A and C</label><br/></li>
                                     </ol>
                                     <p class="answers D"><em>D</em></p>
                                 </div>
